--- a/06 - Type Ahead/index-START.html
+++ b/06 - Type Ahead/index-START.html
@@ -1,10 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <title>Type Ahead 👀</title>
   <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
 
   <form class="search-form">
@@ -14,9 +16,52 @@
       <li>or a state</li>
     </ul>
   </form>
-<script>
-const endpoint = 'https://gist.githubusercontent.com/Miserlou/c5cd8364bf9b2420bb29/raw/2bf258763cdddd704f8ffd3ea9a3e81d25e2c6f6/cities.json';
+  <script>
+    const endpoint = 'https://gist.githubusercontent.com/Miserlou/c5cd8364bf9b2420bb29/raw/2bf258763cdddd704f8ffd3ea9a3e81d25e2c6f6/cities.json';
+    const cities = [];
 
-</script>
-  </body>
+    // Fetching API data
+    fetch(endpoint)
+      .then(res => res.json())
+      .then(data => cities.push(...data))
+
+    // Checks whether the input word matches a city or state and return it
+    findMatches = (word, cities) => {
+      return cities.filter(match => {
+        const regex = new RegExp(word, 'gi');
+        return match.city.match(regex) || match.state.match(regex)
+      })
+    }
+
+    function numberWithCommas(x) {
+      return x.toString().replace(/\B(?=(\d{3})+(?!\d))/g, ',');
+    }
+
+    // Displays the matches
+    function displayMatches() {
+      if (!cities) return;
+      const matches = findMatches(this.value, cities)
+      const html = matches.map(match => {
+        const regex = new RegExp(this.value, 'gi');
+        const cityName = match.city.replace(regex, `<span class="hl">${this.value}</span>`)
+        const stateName = match.state.replace(regex, `<span class="hl">${this.value}</span>`)
+        return `
+          <li>
+            <span class="name">${cityName}, ${stateName}</span>
+            <span class="population">${numberWithCommas(match.population)}</span>
+          </li>
+        `
+      }).join('');
+      suggestions.innerHTML = html
+    }
+
+    const searchInput = document.querySelector('.search');
+    const suggestions = document.querySelector('.suggestions')
+
+    searchInput.addEventListener('change', displayMatches);
+    searchInput.addEventListener('keyup', displayMatches);
+
+  </script>
+</body>
+
 </html>
