--- a/07 - Array Cardio Day 2/index-START.html
+++ b/07 - Array Cardio Day 2/index-START.html
@@ -1,11 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <title>Array Cardio 💪💪</title>
 </head>
+
 <body>
-  <p><em>Psst: have a look at the JavaScript Console</em> 💁</p>
+  <p>
+    <em>Psst: have a look at the JavaScript Console</em> 💁</p>
   <script>
     // ## Array Cardio Day 2
 
@@ -26,16 +29,37 @@
 
     // Some and Every Checks
     // Array.prototype.some() // is at least one person 19 or older?
+    const currentYear = new Date().getFullYear()
+    const age = 19
+    const someOverNineteen = people.some(person => {
+      return person.year < currentYear - age
+    })
+    console.log("Someone over 19 answer:", someOverNineteen)
     // Array.prototype.every() // is everyone 19 or older?
-
+    const everyoneOverNineteen = people.every(person => {
+      return person.year < currentYear - age
+    })
+    console.log("Everyone over 19 answer:", everyoneOverNineteen)
+    console.log('co', comments)
     // Array.prototype.find()
     // Find is like filter, but instead returns just the one you are looking for
     // find the comment with the ID of 823423
 
+    const findComment = comments.find(comment => {
+      return comment.id === 823423
+    })
+    console.log("Find Comment ID 823423:", findComment)
+
     // Array.prototype.findIndex()
     // Find the comment with this ID
     // delete the comment with the ID of 823423
+    const findIndex = comments.findIndex(comment => {
+      return comment.id === 823423
+    })
+    comments.splice(findIndex, 1)
+    console.log("Deleted Comment ID 823423:", comments)
 
   </script>
 </body>
+
 </html>
