--- a/25 - Event Capture, Propagation, Bubbling and Once/index-FINISHED.html
+++ b/25 - Event Capture, Propagation, Bubbling and Once/index-FINISHED.html
@@ -1,9 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <title>Understanding JavaScript's Capture</title>
 </head>
+
 <body class="bod">
 
   <div class="one">
@@ -13,52 +15,61 @@
     </div>
   </div>
 
-<style>
-  html {
-    box-sizing: border-box;
-  }
-  *, *:before, *:after { box-sizing: inherit; }
+  <style>
+    html {
+      box-sizing: border-box;
+    }
 
-  div {
-    width:100%;
-    padding:100px;
-  }
+    *,
+    *:before,
+    *:after {
+      box-sizing: inherit;
+    }
 
-  .one {
-    background: thistle;
-  }
+    div {
+      width: 100%;
+      padding: 100px;
+    }
 
-  .two {
-    background:mistyrose;
-  }
+    .one {
+      background: thistle;
+    }
 
-  .three {
-    background:coral;
-  }
-</style>
+    .two {
+      background: mistyrose;
+    }
 
-<button></button>
-<script>
-  const divs = document.querySelectorAll('div');
-  const button = document.querySelector('button');
+    .three {
+      background: coral;
+    }
+  </style>
 
-  function logText(e) {
-    console.log(this.classList.value);
-    // e.stopPropagation(); // stop bubbling!
-    // console.log(this);
-  }
+  <button></button>
+  <script>
+    const divs = document.querySelectorAll('div');
+    const button = document.querySelector('button');
 
-  divs.forEach(div => div.addEventListener('click', logText, {
-    capture: false,
-    once: true
-  }));
+    function logText(e) {
+      console.log(this.classList.value);
+      // e.stopPropagation(); // stop bubbling!
+      // console.log(this);
+    }
+    // capture is default false and in this case will log three two one or the event bubbling
+    // if capture is true it will log one two three or the event capture
+    // once is that it will only fire the function once unless page refresh no matter how many times you
+    // in this case click.
+    divs.forEach(div => div.addEventListener('click', logText, {
+      capture: false,
+      once: true
+    }));
 
-  button.addEventListener('click', () => {
-    console.log('Click!!!');
-  }, {
-    once: true
-  });
+    button.addEventListener('click', () => {
+      console.log('Click!!!');
+    }, {
+        once: true
+      });
 
-</script>
+  </script>
 </body>
+
 </html>
