--- a/28 - Video Speed Controller/index-START.html
+++ b/28 - Video Speed Controller/index-START.html
@@ -1,10 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <title>Video Speed Scrubber</title>
   <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
 
   <div class="wrapper">
@@ -14,7 +16,25 @@
     </div>
   </div>
 
-<script>
-</script>
+  <script>
+    const speed = document.querySelector('.speed')
+    const bar = document.querySelector('.speed-bar')
+    const video = document.querySelector('.flex')
+
+    speed.addEventListener('mousemove', function (e) {
+      const y = e.pageY - this.offsetTop
+      const p = y / this.offsetHeight
+      const min = 0.4
+      const max = 4
+      const height = `${Math.round(p * 100)}%`
+      bar.style.height = height
+
+      const playbackRate = (max - min) * p + min
+      bar.textContent = playbackRate.toFixed(2) + 'x'
+      video.playbackRate = playbackRate
+
+    })
+  </script>
 </body>
+
 </html>
