--- a/30 - Whack A Mole/index-START.html
+++ b/30 - Whack A Mole/index-START.html
@@ -1,14 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <title>Whack A Mole!</title>
   <link href='https://fonts.googleapis.com/css?family=Amatic+SC:400,700' rel='stylesheet' type='text/css'>
   <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
 
-  <h1>Whack-a-mole! <span class="score">0</span></h1>
+  <h1>Whack-a-mole!
+    <span class="score">0</span>
+  </h1>
   <button onClick="startGame()">Start!</button>
 
   <div class="game">
@@ -32,11 +36,61 @@
     </div>
   </div>
 
-<script>
-  const holes = document.querySelectorAll('.hole');
-  const scoreBoard = document.querySelector('.score');
-  const moles = document.querySelectorAll('.mole');
+  <script>
+    const holes = document.querySelectorAll('.hole');
+    const scoreBoard = document.querySelector('.score');
+    const moles = document.querySelectorAll('.mole');
+    let endGame = false;
+    let lastmole;
+    let score = 0
 
-</script>
+    // Sets random time lapse for the mole's appearance
+    function randomTime(min, max) { return Math.random() * (max - min) + min }
+
+    // Chooses a  random mole to appear
+    function randomMole() {
+      const total = moles.length
+      const mole = Math.floor(Math.random() * total)
+      if (lastmole == mole) {
+        return randomMole()
+      }
+      lastmole = mole
+      return mole
+    }
+
+    // Show the moles for a random amount of time so long as the game has not elapsed
+    function showMoles() {
+      const mole = randomMole()
+      const time = randomTime(200, 1000)
+      holes[mole].classList.add('up')
+      setTimeout(() => {
+        holes[mole].classList.remove('up')
+        if (!endGame) { showMoles() }
+      }, time)
+    }
+
+    // Starts the game, the timer(10 seconds game duration) and the score
+    function startGame() {
+      score = 0
+      endGame = false
+      scoreBoard.textContent = 0
+      showMoles();
+      setTimeout(() => {
+        endGame = true
+      }, 10000)
+    }
+
+    // Count + Display the score
+    function displayScore(e) {
+      if (!e.isTrusted) return;
+      score++;
+      e.target.parentNode.classList.remove('up')
+      scoreBoard.textContent = score
+    }
+
+    moles.forEach(mole => mole.addEventListener('click', displayScore))
+
+  </script>
 </body>
+
 </html>
